--- a/styles.css
+++ b/styles.css
@@ -16,24 +16,39 @@
     background-color: white;
 }
 
+.left {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 450px;
+}
+
 .logo {
-    height: 180px;
+    padding-top: 20px;
+    height: 100px;
+    width: 500px;
+    display: flex;
 }
 
 .product {
-    position: absolute;
-    /* left: 300px;
-    top: 130px; */
+    
     color: rgb(66, 162, 175);
+    text-align: center;    
 }
 
 .contacts {
-    position: absolute;
-    top: 10px;
-    right: 260px;
     display: flex;
     flex-direction: column;
     color: rgb(22, 163, 163);
+    align-self: flex-end;
+    padding-right: 30px;
 }
 
 .item {
@@ -44,15 +59,9 @@
     color: red;
 }
 
-.countries {
-    position: absolute;
+.countries {    
     display: flex;
-    height: 100px;
-    width: 25%;
-    top: 110px;
-    right: 235px;
-    justify-content: flex-end;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .flags {
@@ -74,13 +83,13 @@
 .img_block {
     width: 100%;
     height: 220px;
-    top: 0px;
+    display: block;
 }
 
 .nav_menu {
     display: flex;
     width: 100%;
-    height: 25px;
+    height: 30px;
     background-color: rgb(51, 51, 51);
     color: white;
     justify-content: space-evenly;
@@ -102,7 +111,7 @@
 .menu_list {
     display: none;
     background-color: rgb(51, 51, 51);
-    width: 120px;
+    width: 130px;
     position: absolute;
 }
 
@@ -117,10 +126,52 @@
 .menu_list a {
     display: block;
     color: white;
-    padding-top: 20px;
+    padding: 10px;
     text-decoration: none;   
 }
 
 .dropdown:hover .menu_list {
     display: block;
+}
+
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 185px;
+}
+
+.text_block_left {
+    background-color: rgb(237, 238, 240);
+    width: 300px;
+    height: 465px;
+    text-align: center;
+    flex-direction: column;
+    display: flex;
+}
+
+.text_block_right {
+    background-color: rgb(237, 238, 240);
+    width: 300px;
+    text-align: center;
+    flex-direction: column;
+    display: flex;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.text_overflow {
+    text-overflow: ellipsis;
+    white-space: wrap;
+    max-width: 190px;
+    margin: 0 auto;
+    font-size: 17px;
+}
+
+.footer{
+    background-color: rgb(11, 170, 198);
+    text-align: center;
 }
