--- a/styles.css
+++ b/styles.css
@@ -2,28 +2,28 @@
     margin: 0;
 }
 
-.filling{
+.main_background{
     background: linear-gradient(0deg, #0e9ab3 0%, #00ddff 80%, #fff 80%, #0ff 95%, #0e9ab3 95%);
-    width: 100%;
-    height: 100vh;
+    /* width: 2000px;
+    height: 935px; */
 }
 
 .main_container {
-    width: 80%;
+    width: 1152px;
     height: 900px;
     border: 0.5px solid rgb(0, 0, 0);
     margin: auto;
     background-color: white;
 }
 
-.left {
+.logo_container {
     display: flex;
-    justify-content: space-evenly;
     flex-direction: column;
     justify-content: center;
+    width: auto;
 }
 
-.right {
+.main_info_container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -37,8 +37,7 @@
     display: flex;
 }
 
-.product {
-    
+.title {    
     color: rgb(66, 162, 175);
     text-align: center;    
 }
@@ -51,36 +50,40 @@
     padding-right: 30px;
 }
 
-.item {
+.contacts_item {
     text-decoration: underline;
 }
 
-.item:hover {
+.contacts_item:hover {
     color: red;
+    cursor: pointer;
 }
 
-.countries {    
+.countries_block {    
     display: flex;
     justify-content: space-evenly;
+    text-align: center;
 }
 
-.flags {
+.flag {
     max-height: 43px;
     max-width: 50px;
 }
 
-.description {
+.countries_description {
     text-decoration: underline;
     color: rgb(22, 163, 163);
     text-align: center;
-    font-size: 13px;
+    font-size: 14px;
 }
 
-.description:hover {
+.countries_description:hover {
     color: red;
+    cursor: pointer;
 }
 
 .img_block {
+    padding-top: 5px;
     width: 100%;
     height: 220px;
     display: block;
@@ -96,12 +99,12 @@
     align-items: center;
 }
 
-.dropdown {
+.dropdown_container {
     position: relative;
     display: inline-block;
 }
 
-.nav_button {
+.nav_item {
     background-color: rgb(51, 51, 51);
     color: white;
     border: none;
@@ -115,22 +118,14 @@
     position: absolute;
 }
 
-/* .menu_items {
-    display: block;
-    color: white;
-    padding: 100px;
-    text-decoration: none;
-    position: absolute;
-} */
-
-.menu_list a {
+.menu_list_items {
     display: block;
     color: white;
     padding: 10px;
     text-decoration: none;   
 }
 
-.dropdown:hover .menu_list {
+.dropdown_container:hover .menu_list {
     display: block;
 }
 
@@ -141,16 +136,16 @@
     height: 185px;
 }
 
-.text_block_left {
+.information_block {
     background-color: rgb(237, 238, 240);
     width: 300px;
-    height: 465px;
+    height: 460px;
     text-align: center;
     flex-direction: column;
     display: flex;
 }
 
-.text_block_right {
+.news_block {
     background-color: rgb(237, 238, 240);
     width: 300px;
     text-align: center;
@@ -163,7 +158,7 @@
     justify-content: space-between;
 }
 
-.text_overflow {
+.content_text {
     text-overflow: ellipsis;
     white-space: wrap;
     max-width: 190px;
@@ -172,6 +167,20 @@
 }
 
 .footer{
-    background-color: rgb(11, 170, 198);
+    padding-top: 15px;
     text-align: center;
+    color: white;
+    font-size: 14px;
+}
+
+.arrow {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
